log.txt
Hash: 21d570e31efb2b831b20
Version: webpack 4.42.1
Time: 15169ms
Built at: 06/26/2020 9:15:30 PM
 1 asset
Entrypoint app = app.bundle.js
 [557] ./src/GameOverScene.js 5.09 KiB {0} [built] [failed] [1 error]
 [558] (webpack)/buildin/global.js 472 bytes {0} [built]
[1479] ./src/index.js + 4 modules 18.4 KiB {0} [built]
       | ./src/index.js 510 bytes [built]
       | ./src/GameScene.js 6.47 KiB [built]
       | ./src/LeaderBoardScene.js 3.18 KiB [built]
       | ./src/GameLogic.js 3.71 KiB [built]
       | ./src/leaderboardApi.js 4.47 KiB [built]
    + 1477 hidden modules

WARNING in configuration
The 'mode' option has not been set, webpack will fallback to 'production' for this value. Set 'mode' option to 'development' or 'production' to enable defaults for each environment.
You can also set it to 'none' to disable any default behavior. Learn more: https://webpack.js.org/configuration/mode/

ERROR in ./src/GameOverScene.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/ubuntu/apps-dev/experiments/cowboy-game/src/GameOverScene.js: Unexpected token, expected "," (67:32)

  65 |       
  66 |       localScore = parseInt(localStorage.getItem('score')) 
> 67 |       console.log('localscore,' localScore)
     |                                 ^
  68 |       if (userName !== '') { callApi().submitScore(userName, score); } else { callApi().submitScore('Anonymous', score); }
  69 |       that.scene.start('LeaderBoardScene');
  70 |     });
    at Object._raise (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:742:17)
    at Object.raiseWithData (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:735:17)
    at Object.raise (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:729:17)
    at Object.unexpected (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:8757:16)
    at Object.expect (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:8743:28)
    at Object.parseCallExpressionArguments (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9770:14)
    at Object.parseSubscript (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9696:31)
    at Object.parseSubscripts (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9625:19)
    at Object.parseExprSubscripts (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9608:17)
    at Object.parseMaybeUnary (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9582:21)
    at Object.parseExprOps (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9452:23)
    at Object.parseMaybeConditional (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9425:23)
    at Object.parseMaybeAssign (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9380:21)
    at Object.parseExpression (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9332:23)
    at Object.parseStatementContent (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:11210:23)
    at Object.parseStatement (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:11081:17)
    at Object.parseBlockOrModuleBlockBody (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:11656:25)
    at Object.parseBlockBody (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:11642:10)
    at Object.parseBlock (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:11626:10)
    at Object.parseFunctionBody (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:10634:24)
    at Object.parseArrowExpression (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:10603:10)
    at Object.parseParenAndDistinguishExpression (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:10221:12)
    at Object.parseExprAtom (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9947:21)
    at Object.parseExprAtom (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:4614:20)
    at Object.parseExprSubscripts (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9602:23)
    at Object.parseMaybeUnary (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9582:21)
    at Object.parseExprOps (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9452:23)
    at Object.parseMaybeConditional (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9425:23)
    at Object.parseMaybeAssign (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9380:21)
    at Object.parseExprListItem (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:10718:18)
    at Object.parseCallExpressionArguments (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9790:22)
    at Object.parseSubscript (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9696:31)
    at Object.parseSubscripts (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9625:19)
    at Object.parseExprSubscripts (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9608:17)
    at Object.parseMaybeUnary (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9582:21)
    at Object.parseExprOps (/home/ubuntu/apps-dev/experiments/cowboy-game/node_modules/@babel/parser/lib/index.js:9452:23)
 @ ./src/index.js 3:0-44 22:21-34
